# doux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LISTE.md  README.md  build-wasm.sh  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml
benches/: engine.rs
doux-sova/: Cargo.toml  README.md
doux-sova/src/: convert.rs  lib.rs  manager.rs  peaks.rs  receiver.rs  scope.rs  time.rs  types.rs  worker.rs
src/: audio.rs  benchmark.rs  cli_common.rs  config.rs  envelope.rs  error.rs  event.rs  filter.rs  lib.rs  loader.rs  main.rs  offline.rs  orbit.rs  osc.rs  oscillator.rs  plaits.rs  recorder.rs  repl.rs  sample.rs  sample_loader.rs  sample_registry.rs  schedule.rs  soundfont.rs  telemetry.rs  time.rs  types.rs  wasm.rs
src/audio/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/cli/: bench.rs  render.rs  repl.rs  server.rs
src/dsp/: delay_line.rs  envelope.rs  fastmath.rs  fft.rs  filter.rs  mod.rs  noise.rs  oscillator.rs
src/effects/: chorus.rs  coarse.rs  comb.rs  compressor.rs  crush.rs  delay.rs  distort.rs  eq.rs  fdn.rs  feedback.rs  flanger.rs  haas.rs  ladder.rs  lag.rs  mod.rs  phaser.rs  reverb.rs  smear.rs  tilt.rs  vital_reverb.rs
src/sampling/: cursor.rs  decode.rs  loader.rs  mod.rs  registry.rs  sample.rs  source.rs  stretch.rs
src/voice/: drums.rs  mod.rs  modulation.rs  params.rs  source.rs
tests/: perf_workflow.rs
website/: README.md  package.json  svelte.config.js
website/src/: app.css  app.html
website/src/content/: am.md  bandpass.md  basic.md  chorus.md  comb.md  compressor.md  delay.md  drums.md  envelope.md  eq.md  feedback.md  flanger.md  frequency-modulation.md  ftype.md  gain.md  highpass.md  io.md  ladder.md  lofi.md  lowpass.md  oscillator.md  phaser.md  pitch-env.md  pitch.md  plaits.md  recorder.md  reverb.md  rm.md  sample.md  smear.md  soundfont.md  steep-bandpass.md  steep-highpass.md  steep-lowpass.md  timing.md  vibrato.md  voice.md  wavetable.md
website/src/lib/: doux.ts  errors.svelte.ts  navigation.json  scope.ts  types.ts
website/src/lib/components/: CodeEditor.svelte  CommandEntry.svelte  ErrorBar.svelte  Nav.svelte  Scope.svelte  Sidebar.svelte
website/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
website/src/routes/native/: +page.svelte
website/src/routes/reference/: +page.svelte  +page.ts
website/src/routes/support/: +page.svelte
website/static/: CNAME  doux.wasm
