[workspace]
members = [".", "doux-sova"]

[package]
name = "doux"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "doux"
path = "src/cli/server.rs"
required-features = ["native"]

[[bin]]
name = "doux-repl"
path = "src/cli/repl.rs"
required-features = ["native"]

[[bin]]
name = "doux-render"
path = "src/cli/render.rs"
required-features = ["render"]

[features]
default = ["native"]
native = ["dep:clap", "dep:cpal", "dep:rosc", "dep:symphonia", "dep:rustyline", "dep:arc-swap", "dep:crossbeam-channel"]
render = ["dep:clap", "dep:symphonia", "dep:arc-swap", "dep:hound"]

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
cpal = { version = "0.17", optional = true, features = ["jack"] }
rosc = { version = "0.10", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["wav", "pcm", "mp3", "ogg", "flac", "aac"] }
hound = { version = "3.5", optional = true }
rustyline = { version = "14", optional = true }
arc-swap = { version = "1.7", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
mi-plaits-dsp = { git = "https://github.com/sourcebox/mi-plaits-dsp-rs", rev = "dc55bd55e73bd6f86fbbb4f8adc3b598d659fdb4" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag = true
push = true
publish = false

[[workspace.metadata.release.pre-release-replacements]]
file = "website/package.json"
search = "\"version\": \"[0-9]+\\.[0-9]+\\.[0-9]+\""
replace = "\"version\": \"{{version}}\""
